--- a/views/index.html
+++ b/views/index.html
@@ -41,7 +41,7 @@
                     <h3 class="card-title">Conf Bs As</h3>
                     <p class="card-text">Bs As llega por primerta vez a Argentina. Un evento para compartir con nuestra comunidad el conocimiento y experiencia de los expertos que están creando el futuro de Internet. Ven a conocer a miembros del evento, a otros estudiantes de Codo a Codo y los oradores de primer nivel que tenemos para ti. Te esperamos!</p>
                     <button type="button" class="btn btn-outline-secondary text-white border-white mx-1">Quiero ser orador</button>
-                    <button type="button" class="btn btn-success mx-1" style="background-color: #29A744; border: #29A744;">Comprar tickets</button>
+                    <button type="button" class="btn btn-success mx-1" style="background-color: #29A744; border: #29A744">Comprar tickets</button>
                 </div>
             </div>
         </div>
