funcionalidad vista comprarTickets terminada

--- a/views/index.html
+++ b/views/index.html
@@ -28,7 +28,7 @@
                     <a class="nav-link text-white-50" href="#">Los oradores</a>
                     <a class="nav-link text-white-50" href="#">El lugar y la fecha</a>
                     <a class="nav-link text-white-50" href="#">Coviértete en orador</a>
-                    <a class="nav-link text-success" href="./comprarTickets.html">Comprar tickets</a>
+                    <a class="nav-link text-success" href="/views/comprartickets.html">Comprar tickets</a>
                 </nav>
             </article>
         </div>
@@ -149,5 +149,6 @@
         </div>
 
     </main>
+    <script src="../app.js"></script>
 </body>
 </html>
