--- a/views/comprarTickets.html
+++ b/views/comprarTickets.html
@@ -78,37 +78,37 @@
         <!-- Sección para inscribirse como orador -->
 
         <!-- Input Apellido y Nombre -->
-        <div class="container col-9">
+        <form class="container col-9">
             <div class="row d-flex mb-2 justify-content-center">                
                 <article class="ps-0" style="width: 38.5%">
-                    <input type="nombre" class="form-control mb-3" id="exampleFormControlInput1" placeholder="Nombre">                
+                    <input type="nombre" class="form-control mb-3" id="FormControlInput1" placeholder="Nombre">                
                 </article>
 
                 <article class="pe-0" style="width: 38.5%">
-                    <input type="apellido" class="form-control mb-3" id="exampleFormControlInput2" placeholder="Apellido">
+                    <input type="apellido" class="form-control mb-3" id="FormControlInput2" placeholder="Apellido">
                 </article>
             </div>    
             
             <!-- Input Correo -->
             <div class="row d-flex justify-content-center mb-2">
                 <article class="ps-0 pe-0" style="width: 77%;">
-                    <input type="correo" class="form-control mb-3" id="exampleFormControlInput3" placeholder="Correo">
+                    <input type="correo" class="form-control mb-3" id="FormControlInput3" placeholder="Correo">
                 </article>
             </div>
 
             <!-- Input Cantidad y Select Categoría -->
             <div class="row d-flex justify-content-center mb-2">
                 <section class="ps-0" style="width: 38.5%">
-                    <label for="cantidad" id="exampleFormControlInput4" class="form-label">Cantidad</label>
+                    <label for="cantidad" class="form-label">Cantidad</label>
                     <article>
-                        <input type="number" class="form-control mb-3" id="exampleFormControlInput4" placeholder="Cantidad" min="1">
+                        <input type="number" class="form-control mb-3" id="FormControlInput4" placeholder="Cantidad" min="1">
                     </article>
                 </section>
 
                 <section class="pe-0" style="width: 38.5%">
-                <label for="categoría" id="exampleFormControlInput5" class="form-label">Categoría</label>
+                <label for="categoría" class="form-label">Categoría</label>
                     <article>
-                        <select class="form-select" aria-label="">
+                        <select class="form-select" aria-label="" id="FormControlInput5">
                             <option selected></option>
                             <option value="1">Estudiante</option>
                             <option value="2">Trainee</option>
@@ -121,23 +121,23 @@
             <!-- Mensaje Total a Pagar -->
             <div class="row d-flex justify-content-center mb-4">
                 <article class="ps-0 pe-0 rounded border" style="width: 77%; background-color: #CCE5FF; border-color: #9ADAFF;">
-                    <p style="color: #004085" class="pt-2 pb-2 ps-4 pe-4 m-0">Total a Pagar: $</p>
+                    <p id="totalpago" style="color: #004085" class="pt-2 pb-2 ps-4 pe-4 m-0">Total a Pagar: $</p>
                 </article>
             </div>
 
             <!-- Botones Enviar y Borrar -->
             <div class="row d-flex justify-content-center mb-3">
                 <article class="ps-0" style="width: 38.5%">
-                    <button class="btn btn-success w-100 border-0" type="button" value="Enviar" style="background-color: #96C93E;">Borrar</button>
+                    <button id="botonBorrar" class="btn btn-success w-100 border-0" type="button" style="background-color: #96C93E;">Borrar</button>
                 </article>
 
                 <article class="pe-0" style="width: 38.5%">
-                    <button class="btn btn-success w-100 border-0" type="button" value="Enviar" style="background-color: #96C93E;">Resumen</button>
+                    <button id="botonResumen" class="btn btn-success w-100 border-0" type="button" style="background-color: #96C93E">Resumen</button>
                 </article>
             </div>
-        </div>
+        </form>
 
-         <!-- Pié de página -->
+        <!-- Pié de página -->
         <footer class="row">
             <article class="col-12 p-0">
                 <nav class="navbar navbar-expand-lg navbar-light bg-gradient d-flex justify-content-evenly text-center px-5" style="background-color: #1D465C;">
@@ -153,5 +153,6 @@
         </footer>
 
     </main>
-    
+    <script src="../app.js"></script>
 </body>
+</html>
